Minor fixes for consistency and readability

--- a/sass/decoration/_badge.sass
+++ b/sass/decoration/_badge.sass
@@ -6,6 +6,7 @@
 // Box Model
 $badge-size: 1.5em
 $badge-border-radius: 1em
+$badge-margin: 0 0.25em
 
 
 /*
@@ -17,5 +18,6 @@ $badge-border-radius: 1em
   height: $badge-size
   width: $badge-size
   text-align: center
+  margin: $badge-margin
   border-radius: $badge-border-radius
   line-height: $badge-size
