--- a/sass/input/_button.sass
+++ b/sass/input/_button.sass
@@ -9,7 +9,7 @@ $btn-background: $color-info
 
 // Box Model
 $btn-margin: 0.5em
-$btn-border-width: 0.1875em
+$btn-border-width: 0.15rem
 $btn-border-radius: 0.25em
 $btn-padding: 0.5em
 
