--- a/sass/navigation/_pagination.sass
+++ b/sass/navigation/_pagination.sass
@@ -8,7 +8,8 @@ $paginate-button-selected: #CCC
 
 // Box Model
 $paginate-button-margin: 0.25em
-$paginate-button-padding: 0.5em 0.75em
+$paginate-button-padding: 0.375em 0.75em
+$paginate-button-radius: 0.25em
 
 
 /*
@@ -23,3 +24,4 @@ $paginate-button-padding: 0.5em 0.75em
     padding: $paginate-button-padding
     &:hover,&.here
       background: $paginate-button-selected
+      border-radius: $paginate-button-radius
