--- a/sass/navigation/_sidebar.sass
+++ b/sass/navigation/_sidebar.sass
@@ -6,7 +6,7 @@ $sidebar-section-bg: #555
 $sidebar-item-bg: #333
 $sidebar-item-fg: #FFF
 
-$sidebar-item-padding: 0.5em 1em
+$sidebar-item-padding: 0.5em 1.25em
 $sidebar-section-padding: 0.25em 1em
 
 /*
@@ -14,8 +14,8 @@ $sidebar-section-padding: 0.25em 1em
  */
 .sidebar
   ul
+    @extend %hide-bullet
     height: 100%
-    width: 100%
     background: $sidebar-item-bg
     li
       color: $sidebar-item-fg
